brightcc/src/bison-parser.output
Terminale, die in Grammatik unbenutzt sind

   AUTO
   REGISTER
   INLINE
   RESTRICT
   VOLATILE
   COMPLEX
   IMAGINARY
   ELLIPSIS
   GOTO


Zustand 1 Konflikte: 19 Reduziere/Reduziere
Zustand 8 Konflikte: 10 Schiebe/Reduziere
Zustand 80 Konflikte: 3 Schiebe/Reduziere
Zustand 84 Konflikte: 1 Schiebe/Reduziere
Zustand 85 Konflikte: 2 Schiebe/Reduziere
Zustand 89 Konflikte: 1 Schiebe/Reduziere
Zustand 111 Konflikte: 1 Schiebe/Reduziere
Zustand 112 Konflikte: 1 Reduziere/Reduziere
Zustand 137 Konflikte: 1 Schiebe/Reduziere, 2 Reduziere/Reduziere
Zustand 139 Konflikte: 1 Schiebe/Reduziere
Zustand 184 Konflikte: 1 Schiebe/Reduziere
Zustand 238 Konflikte: 1 Schiebe/Reduziere
Zustand 239 Konflikte: 1 Schiebe/Reduziere
Zustand 240 Konflikte: 2 Schiebe/Reduziere
Zustand 241 Konflikte: 2 Schiebe/Reduziere
Zustand 249 Konflikte: 1 Schiebe/Reduziere
Zustand 281 Konflikte: 1 Schiebe/Reduziere, 11 Reduziere/Reduziere
Zustand 316 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: translation_unit $end

    1 linkage_modifier: STATIC
    2                 | EXTERN
    3                 | EXPORT
    4                 | ASYNC

    5 linkage_modifiers: linkage_modifier
    6                  | linkage_modifier linkage_modifiers

    7 primitive_type: SIGNED primitive_type
    8               | UNSIGNED primitive_type
    9               | LONG primitive_type
   10               | CHAR
   11               | SHORT
   12               | INT
   13               | LONG
   14               | FLOAT
   15               | DOUBLE
   16               | BOOL
   17               | VOID

   18 struct_or_union: STRUCT
   19                | UNION

   20 struct_declaration_list: variable_declaration
   21                        | variable_declaration struct_declaration_list

   22 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
   23                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
   24                          | struct_or_union IDENTIFIER

   25 type: primitive_type
   26     | type '*'
   27     | type CONST
   28     | struct_or_union_specifier
   29     | IDENTIFIER

   30 enum_member: IDENTIFIER
   31            | IDENTIFIER '=' constexpr

   32 enum_members: enum_member
   33             | enum_member ',' enum_members

   34 enum_specifier: ENUM IDENTIFIER '{' enum_members '}'
   35               | ENUM IDENTIFIER '{' enum_members ',' '}'

   36 type_declaration: struct_or_union_specifier ';'
   37                 | TYPEDEF type IDENTIFIER ';'
   38                 | enum_specifier ';'

   39 literal: TRUE
   40        | FALSE
   41        | INT_CONSTANT
   42        | REAL_CONSTANT
   43        | STRING_LITERAL

   44 primary_expression: IDENTIFIER
   45                   | literal
   46                   | '(' expr ')'
   47                   | '(' IDENTIFIER ')'
   48                   | '(' literal ')'

   49 postfix_expression: primary_expression
   50                   | postfix_expression '[' expr ']'
   51                   | postfix_expression '(' ')'
   52                   | postfix_expression '(' argument_expression_list ')'
   53                   | postfix_expression '.' IDENTIFIER
   54                   | postfix_expression PTR_OP IDENTIFIER
   55                   | postfix_expression INC_OP
   56                   | postfix_expression DEC_OP
   57                   | '(' type ')' '{' initializer_list '}'
   58                   | '(' type ')' '{' initializer_list ',' '}'

   59 initializer: '{' initializer_list '}'
   60            | '{' initializer_list ',' '}'
   61            | assignment_expression

   62 initializer_list: designation initializer
   63                 | initializer
   64                 | initializer_list ',' designation initializer
   65                 | initializer_list ',' initializer

   66 designation: designator_list '='

   67 designator_list: designator
   68                | designator_list designator

   69 designator: '[' constexpr ']'
   70           | '.' IDENTIFIER

   71 argument_expression_list: assignment_expression
   72                         | argument_expression_list ',' assignment_expression

   73 unary_expression: postfix_expression
   74                 | INC_OP unary_expression
   75                 | DEC_OP unary_expression
   76                 | unary_operator cast_expression
   77                 | SIZEOF unary_expression
   78                 | SIZEOF '(' type ')'

   79 unary_operator: '&'
   80               | '*'
   81               | '+'
   82               | '-'
   83               | '~'
   84               | '!'
   85               | AWAIT

   86 cast_expression: unary_expression
   87                | '(' type ')' cast_expression

   88 multiplicative_expression: cast_expression
   89                          | multiplicative_expression '*' cast_expression
   90                          | multiplicative_expression '/' cast_expression
   91                          | multiplicative_expression '%' cast_expression

   92 additive_expression: multiplicative_expression
   93                    | additive_expression '+' multiplicative_expression
   94                    | additive_expression '-' multiplicative_expression

   95 shift_expression: additive_expression
   96                 | shift_expression LEFT_OP additive_expression
   97                 | shift_expression RIGHT_OP additive_expression

   98 relational_expression: shift_expression
   99                      | relational_expression '<' shift_expression
  100                      | relational_expression '>' shift_expression
  101                      | relational_expression LE_OP shift_expression
  102                      | relational_expression GE_OP shift_expression

  103 equality_expression: relational_expression
  104                    | equality_expression EQ_OP relational_expression
  105                    | equality_expression NE_OP relational_expression

  106 and_expression: equality_expression
  107               | and_expression '&' equality_expression

  108 exclusive_or_expression: and_expression
  109                        | exclusive_or_expression '^' and_expression

  110 inclusive_or_expression: exclusive_or_expression
  111                        | inclusive_or_expression '|' exclusive_or_expression

  112 logical_and_expression: inclusive_or_expression
  113                       | logical_and_expression AND_OP inclusive_or_expression

  114 logical_or_expression: logical_and_expression
  115                      | logical_or_expression OR_OP logical_and_expression

  116 conditional_expression: logical_or_expression
  117                       | logical_or_expression '?' expr ':' conditional_expression

  118 assignment_expression: conditional_expression
  119                      | unary_expression assignment_operator assignment_expression

  120 assignment_operator: '='
  121                    | MUL_ASSIGN
  122                    | DIV_ASSIGN
  123                    | MOD_ASSIGN
  124                    | ADD_ASSIGN
  125                    | SUB_ASSIGN
  126                    | LEFT_ASSIGN
  127                    | RIGHT_ASSIGN
  128                    | AND_ASSIGN
  129                    | XOR_ASSIGN
  130                    | OR_ASSIGN

  131 expr: assignment_expression
  132     | expr ',' assignment_expression

  133 constexpr: conditional_expression

  134 array_size_modifier: '[' expr ']'

  135 array_size_modifiers: array_size_modifier
  136                     | array_size_modifier array_size_modifiers

  137 scalar_or_array_name: IDENTIFIER array_size_modifiers
  138                     | IDENTIFIER

  139 declaration: scalar_or_array_name '=' expr
  140            | scalar_or_array_name '=' '{' initializer_list '}'
  141            | scalar_or_array_name '=' '{' initializer_list ',' '}'
  142            | scalar_or_array_name

  143 declaration_list: declaration
  144                 | declaration ',' declaration_list

  145 variable_declaration: linkage_modifiers type declaration_list ';'
  146                     | type declaration_list ';'

  147 expression_statement: ';'
  148                     | expr ';'

  149 labeled_statement: IDENTIFIER ':' statement
  150                  | CASE constexpr ':' statement
  151                  | DEFAULT ':' statement

  152 statement: expression_statement
  153          | labeled_statement
  154          | block
  155          | variable_declaration
  156          | WHILE '(' expr ')' statement
  157          | DO block WHILE '(' expr ')' ';'
  158          | IF '(' expr ')' statement ELSE statement
  159          | IF '(' expr ')' statement
  160          | BREAK ';'
  161          | CONTINUE ';'
  162          | RETURN ';'
  163          | RETURN expr ';'
  164          | FOR '(' expression_statement expression_statement ')' statement
  165          | FOR '(' expression_statement expression_statement expr ')' statement
  166          | FOR '(' declaration expression_statement ')' statement
  167          | FOR '(' declaration expression_statement expr ')' statement
  168          | SWITCH '(' expr ')' statement

  169 statement_list: statement
  170               | statement statement_list

  171 block: '{' '}'
  172      | '{' statement_list '}'

  173 parameter: type scalar_or_array_name
  174          | type

  175 parameter_list: parameter
  176               | parameter ',' parameter_list

  177 function_signature: type IDENTIFIER '(' ')'
  178                   | type IDENTIFIER '(' parameter_list ')'
  179                   | linkage_modifiers type IDENTIFIER '(' ')'
  180                   | linkage_modifiers type IDENTIFIER '(' parameter_list ')'

  181 function_declaration: function_signature ';'
  182                     | function_signature block

  183 declaration: variable_declaration
  184            | function_declaration
  185            | type_declaration

  186 translation_unit: declaration
  187                 | translation_unit declaration


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
'!' (33) 84
'%' (37) 91
'&' (38) 79 107
'(' (40) 46 47 48 51 52 57 58 78 87 156 157 158 159 164 165 166 167
    168 177 178 179 180
')' (41) 46 47 48 51 52 57 58 78 87 156 157 158 159 164 165 166 167
    168 177 178 179 180
'*' (42) 26 80 89
'+' (43) 81 93
',' (44) 33 35 58 60 64 65 72 132 141 144 176
'-' (45) 82 94
'.' (46) 53 70
'/' (47) 90
':' (58) 117 149 150 151
';' (59) 36 37 38 145 146 147 148 157 160 161 162 163 181
'<' (60) 99
'=' (61) 31 66 120 139 140 141
'>' (62) 100
'?' (63) 117
'[' (91) 50 69 134
']' (93) 50 69 134
'^' (94) 109
'{' (123) 22 23 34 35 57 58 59 60 140 141 171 172
'|' (124) 111
'}' (125) 22 23 34 35 57 58 59 60 140 141 171 172
'~' (126) 83
error (256)
IDENTIFIER (258) 23 24 29 30 31 34 35 37 44 47 53 54 70 137 138 149
    177 178 179 180
INT_CONSTANT (259) 41
REAL_CONSTANT (260) 42
STRING_LITERAL (261) 43
SIZEOF (262) 77 78
PTR_OP (263) 54
INC_OP (264) 55 74
DEC_OP (265) 56 75
LEFT_OP (266) 96
RIGHT_OP (267) 97
LE_OP (268) 101
GE_OP (269) 102
EQ_OP (270) 104
NE_OP (271) 105
AND_OP (272) 113
OR_OP (273) 115
MUL_ASSIGN (274) 121
DIV_ASSIGN (275) 122
MOD_ASSIGN (276) 123
ADD_ASSIGN (277) 124
SUB_ASSIGN (278) 125
LEFT_ASSIGN (279) 126
RIGHT_ASSIGN (280) 127
AND_ASSIGN (281) 128
XOR_ASSIGN (282) 129
OR_ASSIGN (283) 130
TYPEDEF (284) 37
EXTERN (285) 2
STATIC (286) 1
AUTO (287)
REGISTER (288)
INLINE (289)
RESTRICT (290)
CHAR (291) 10
SHORT (292) 11
INT (293) 12
LONG (294) 9 13
SIGNED (295) 7
UNSIGNED (296) 8
FLOAT (297) 14
DOUBLE (298) 15
CONST (299) 27
VOLATILE (300)
VOID (301) 17
BOOL (302) 16
COMPLEX (303)
IMAGINARY (304)
STRUCT (305) 18
UNION (306) 19
ENUM (307) 34 35
ELLIPSIS (308)
TRUE (309) 39
FALSE (310) 40
CASE (311) 150
DEFAULT (312) 151
IF (313) 158 159
ELSE (314) 158
SWITCH (315) 168
WHILE (316) 156 157
DO (317) 157
FOR (318) 164 165 166 167
GOTO (319)
CONTINUE (320) 161
BREAK (321) 160
RETURN (322) 162 163
EXPORT (323) 3
ASYNC (324) 4
AWAIT (325) 85


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (95)
    auf der linken Seite: 0
linkage_modifier (96)
    auf der linken Seite: 1 2 3 4, auf der rechten Seite: 5 6
linkage_modifiers (97)
    auf der linken Seite: 5 6, auf der rechten Seite: 6 145 179 180
primitive_type (98)
    auf der linken Seite: 7 8 9 10 11 12 13 14 15 16 17, auf der rechten Seite:
    7 8 9 25
struct_or_union (99)
    auf der linken Seite: 18 19, auf der rechten Seite: 22 23 24
struct_declaration_list (100)
    auf der linken Seite: 20 21, auf der rechten Seite: 21 22 23
struct_or_union_specifier (101)
    auf der linken Seite: 22 23 24, auf der rechten Seite: 28 36
type (102)
    auf der linken Seite: 25 26 27 28 29, auf der rechten Seite: 26
    27 37 57 58 78 87 145 146 173 174 177 178 179 180
enum_member (103)
    auf der linken Seite: 30 31, auf der rechten Seite: 32 33
enum_members (104)
    auf der linken Seite: 32 33, auf der rechten Seite: 33 34 35
enum_specifier (105)
    auf der linken Seite: 34 35, auf der rechten Seite: 38
type_declaration (106)
    auf der linken Seite: 36 37 38, auf der rechten Seite: 185
literal (107)
    auf der linken Seite: 39 40 41 42 43, auf der rechten Seite: 45
    48
primary_expression (108)
    auf der linken Seite: 44 45 46 47 48, auf der rechten Seite: 49
postfix_expression (109)
    auf der linken Seite: 49 50 51 52 53 54 55 56 57 58, auf der rechten Seite:
    50 51 52 53 54 55 56 73
initializer (110)
    auf der linken Seite: 59 60 61, auf der rechten Seite: 62 63 64
    65
initializer_list (111)
    auf der linken Seite: 62 63 64 65, auf der rechten Seite: 57 58
    59 60 64 65 140 141
designation (112)
    auf der linken Seite: 66, auf der rechten Seite: 62 64
designator_list (113)
    auf der linken Seite: 67 68, auf der rechten Seite: 66 68
designator (114)
    auf der linken Seite: 69 70, auf der rechten Seite: 67 68
argument_expression_list (115)
    auf der linken Seite: 71 72, auf der rechten Seite: 52 72
unary_expression (116)
    auf der linken Seite: 73 74 75 76 77 78, auf der rechten Seite:
    74 75 77 86 119
unary_operator (117)
    auf der linken Seite: 79 80 81 82 83 84 85, auf der rechten Seite:
    76
cast_expression (118)
    auf der linken Seite: 86 87, auf der rechten Seite: 76 87 88 89
    90 91
multiplicative_expression (119)
    auf der linken Seite: 88 89 90 91, auf der rechten Seite: 89 90
    91 92 93 94
additive_expression (120)
    auf der linken Seite: 92 93 94, auf der rechten Seite: 93 94 95
    96 97
shift_expression (121)
    auf der linken Seite: 95 96 97, auf der rechten Seite: 96 97 98
    99 100 101 102
relational_expression (122)
    auf der linken Seite: 98 99 100 101 102, auf der rechten Seite:
    99 100 101 102 103 104 105
equality_expression (123)
    auf der linken Seite: 103 104 105, auf der rechten Seite: 104 105
    106 107
and_expression (124)
    auf der linken Seite: 106 107, auf der rechten Seite: 107 108 109
exclusive_or_expression (125)
    auf der linken Seite: 108 109, auf der rechten Seite: 109 110 111
inclusive_or_expression (126)
    auf der linken Seite: 110 111, auf der rechten Seite: 111 112 113
logical_and_expression (127)
    auf der linken Seite: 112 113, auf der rechten Seite: 113 114 115
logical_or_expression (128)
    auf der linken Seite: 114 115, auf der rechten Seite: 115 116 117
conditional_expression (129)
    auf der linken Seite: 116 117, auf der rechten Seite: 117 118 133
assignment_expression (130)
    auf der linken Seite: 118 119, auf der rechten Seite: 61 71 72
    119 131 132
assignment_operator (131)
    auf der linken Seite: 120 121 122 123 124 125 126 127 128 129 130,
    auf der rechten Seite: 119
expr (132)
    auf der linken Seite: 131 132, auf der rechten Seite: 46 50 117
    132 134 139 148 156 157 158 159 163 165 167 168
constexpr (133)
    auf der linken Seite: 133, auf der rechten Seite: 31 69 150
array_size_modifier (134)
    auf der linken Seite: 134, auf der rechten Seite: 135 136
array_size_modifiers (135)
    auf der linken Seite: 135 136, auf der rechten Seite: 136 137
scalar_or_array_name (136)
    auf der linken Seite: 137 138, auf der rechten Seite: 139 140 141
    142 173
declaration (137)
    auf der linken Seite: 139 140 141 142 183 184 185, auf der rechten Seite:
    143 144 166 167 186 187
declaration_list (138)
    auf der linken Seite: 143 144, auf der rechten Seite: 144 145 146
variable_declaration (139)
    auf der linken Seite: 145 146, auf der rechten Seite: 20 21 155
    183
expression_statement (140)
    auf der linken Seite: 147 148, auf der rechten Seite: 152 164 165
    166 167
labeled_statement (141)
    auf der linken Seite: 149 150 151, auf der rechten Seite: 153
statement (142)
    auf der linken Seite: 152 153 154 155 156 157 158 159 160 161 162
    163 164 165 166 167 168, auf der rechten Seite: 149 150 151 156
    158 159 164 165 166 167 168 169 170
statement_list (143)
    auf der linken Seite: 169 170, auf der rechten Seite: 170 172
block (144)
    auf der linken Seite: 171 172, auf der rechten Seite: 154 157 182
parameter (145)
    auf der linken Seite: 173 174, auf der rechten Seite: 175 176
parameter_list (146)
    auf der linken Seite: 175 176, auf der rechten Seite: 176 178 180
function_signature (147)
    auf der linken Seite: 177 178 179 180, auf der rechten Seite: 181
    182
function_declaration (148)
    auf der linken Seite: 181 182, auf der rechten Seite: 184
translation_unit (149)
    auf der linken Seite: 186 187, auf der rechten Seite: 0 187


Zustand 0

    0 $accept: . translation_unit $end

    IDENTIFIER  schiebe und gehe zu Zustand 1 über
    TYPEDEF     schiebe und gehe zu Zustand 2 über
    EXTERN      schiebe und gehe zu Zustand 3 über
    STATIC      schiebe und gehe zu Zustand 4 über
    CHAR        schiebe und gehe zu Zustand 5 über
    SHORT       schiebe und gehe zu Zustand 6 über
    INT         schiebe und gehe zu Zustand 7 über
    LONG        schiebe und gehe zu Zustand 8 über
    SIGNED      schiebe und gehe zu Zustand 9 über
    UNSIGNED    schiebe und gehe zu Zustand 10 über
    FLOAT       schiebe und gehe zu Zustand 11 über
    DOUBLE      schiebe und gehe zu Zustand 12 über
    VOID        schiebe und gehe zu Zustand 13 über
    BOOL        schiebe und gehe zu Zustand 14 über
    STRUCT      schiebe und gehe zu Zustand 15 über
    UNION       schiebe und gehe zu Zustand 16 über
    ENUM        schiebe und gehe zu Zustand 17 über
    EXPORT      schiebe und gehe zu Zustand 18 über
    ASYNC       schiebe und gehe zu Zustand 19 über

    linkage_modifier           gehe zu Zustand 20 über
    linkage_modifiers          gehe zu Zustand 21 über
    primitive_type             gehe zu Zustand 22 über
    struct_or_union            gehe zu Zustand 23 über
    struct_or_union_specifier  gehe zu Zustand 24 über
    type                       gehe zu Zustand 25 über
    enum_specifier             gehe zu Zustand 26 über
    type_declaration           gehe zu Zustand 27 über
    scalar_or_array_name       gehe zu Zustand 28 über
    declaration                gehe zu Zustand 29 über
    variable_declaration       gehe zu Zustand 30 über
    function_signature         gehe zu Zustand 31 über
    function_declaration       gehe zu Zustand 32 über
    translation_unit           gehe zu Zustand 33 über


Zustand 1

   29 type: IDENTIFIER .
  137 scalar_or_array_name: IDENTIFIER . array_size_modifiers
  138                     | IDENTIFIER .

    '['  schiebe und gehe zu Zustand 34 über

    $end        reduziere mit Regel 138 (scalar_or_array_name)
    IDENTIFIER  reduziere mit Regel 29 (type)
    IDENTIFIER  [reduziere mit Regel 138 (scalar_or_array_name)]
    TYPEDEF     reduziere mit Regel 29 (type)
    TYPEDEF     [reduziere mit Regel 138 (scalar_or_array_name)]
    EXTERN      reduziere mit Regel 29 (type)
    EXTERN      [reduziere mit Regel 138 (scalar_or_array_name)]
    STATIC      reduziere mit Regel 29 (type)
    STATIC      [reduziere mit Regel 138 (scalar_or_array_name)]
    CHAR        reduziere mit Regel 29 (type)
    CHAR        [reduziere mit Regel 138 (scalar_or_array_name)]
    SHORT       reduziere mit Regel 29 (type)
    SHORT       [reduziere mit Regel 138 (scalar_or_array_name)]
    INT         reduziere mit Regel 29 (type)
    INT         [reduziere mit Regel 138 (scalar_or_array_name)]
    LONG        reduziere mit Regel 29 (type)
    LONG        [reduziere mit Regel 138 (scalar_or_array_name)]
    SIGNED      reduziere mit Regel 29 (type)
    SIGNED      [reduziere mit Regel 138 (scalar_or_array_name)]
    UNSIGNED    reduziere mit Regel 29 (type)
    UNSIGNED    [reduziere mit Regel 138 (scalar_or_array_name)]
    FLOAT       reduziere mit Regel 29 (type)
    FLOAT       [reduziere mit Regel 138 (scalar_or_array_name)]
    DOUBLE      reduziere mit Regel 29 (type)
    DOUBLE      [reduziere mit Regel 138 (scalar_or_array_name)]
    VOID        reduziere mit Regel 29 (type)
    VOID        [reduziere mit Regel 138 (scalar_or_array_name)]
    BOOL        reduziere mit Regel 29 (type)
    BOOL        [reduziere mit Regel 138 (scalar_or_array_name)]
    STRUCT      reduziere mit Regel 29 (type)
    STRUCT      [reduziere mit Regel 138 (scalar_or_array_name)]
    UNION       reduziere mit Regel 29 (type)
    UNION       [reduziere mit Regel 138 (scalar_or_array_name)]
    ENUM        reduziere mit Regel 29 (type)
    ENUM        [reduziere mit Regel 138 (scalar_or_array_name)]
    EXPORT      reduziere mit Regel 29 (type)
    EXPORT      [reduziere mit Regel 138 (scalar_or_array_name)]
    ASYNC       reduziere mit Regel 29 (type)
    ASYNC       [reduziere mit Regel 138 (scalar_or_array_name)]
    '='         reduziere mit Regel 138 (scalar_or_array_name)
    ','         reduziere mit Regel 138 (scalar_or_array_name)
    ';'         reduziere mit Regel 138 (scalar_or_array_name)
    $default    reduziere mit Regel 29 (type)

    array_size_modifier   gehe zu Zustand 35 über
    array_size_modifiers  gehe zu Zustand 36 über


Zustand 2

   37 type_declaration: TYPEDEF . type IDENTIFIER ';'

    IDENTIFIER  schiebe und gehe zu Zustand 37 über
    CHAR        schiebe und gehe zu Zustand 5 über
    SHORT       schiebe und gehe zu Zustand 6 über
    INT         schiebe und gehe zu Zustand 7 über
    LONG        schiebe und gehe zu Zustand 8 über
    SIGNED      schiebe und gehe zu Zustand 9 über
    UNSIGNED    schiebe und gehe zu Zustand 10 über
    FLOAT       schiebe und gehe zu Zustand 11 über
    DOUBLE      schiebe und gehe zu Zustand 12 über
    VOID        schiebe und gehe zu Zustand 13 über
    BOOL        schiebe und gehe zu Zustand 14 über
    STRUCT      schiebe und gehe zu Zustand 15 über
    UNION       schiebe und gehe zu Zustand 16 über

    primitive_type             gehe zu Zustand 22 über
    struct_or_union            gehe zu Zustand 23 über
    struct_or_union_specifier  gehe zu Zustand 38 über
    type                       gehe zu Zustand 39 über


Zustand 3

    2 linkage_modifier: EXTERN .

    $default  reduziere mit Regel 2 (linkage_modifier)


Zustand 4

    1 linkage_modifier: STATIC .

    $default  reduziere mit Regel 1 (linkage_modifier)


Zustand 5

   10 primitive_type: CHAR .

    $default  reduziere mit Regel 10 (primitive_type)


Zustand 6

   11 primitive_type: SHORT .

    $default  reduziere mit Regel 11 (primitive_type)


Zustand 7

   12 primitive_type: INT .

    $default  reduziere mit Regel 12 (primitive_type)


Zustand 8

    9 primitive_type: LONG . primitive_type
   13               | LONG .

    CHAR      schiebe und gehe zu Zustand 5 über
    SHORT     schiebe und gehe zu Zustand 6 über
    INT       schiebe und gehe zu Zustand 7 über
    LONG      schiebe und gehe zu Zustand 8 über
    SIGNED    schiebe und gehe zu Zustand 9 über
    UNSIGNED  schiebe und gehe zu Zustand 10 über
    FLOAT     schiebe und gehe zu Zustand 11 über
    DOUBLE    schiebe und gehe zu Zustand 12 über
    VOID      schiebe und gehe zu Zustand 13 über
    BOOL      schiebe und gehe zu Zustand 14 über

    CHAR      [reduziere mit Regel 13 (primitive_type)]
    SHORT     [reduziere mit Regel 13 (primitive_type)]
    INT       [reduziere mit Regel 13 (primitive_type)]
    LONG      [reduziere mit Regel 13 (primitive_type)]
    SIGNED    [reduziere mit Regel 13 (primitive_type)]
    UNSIGNED  [reduziere mit Regel 13 (primitive_type)]
    FLOAT     [reduziere mit Regel 13 (primitive_type)]
    DOUBLE    [reduziere mit Regel 13 (primitive_type)]
    VOID      [reduziere mit Regel 13 (primitive_type)]
    BOOL      [reduziere mit Regel 13 (primitive_type)]
    $default  reduziere mit Regel 13 (primitive_type)

    primitive_type  gehe zu Zustand 40 über


Zustand 9

    7 primitive_type: SIGNED . primitive_type

    CHAR      schiebe und gehe zu Zustand 5 über
    SHORT     schiebe und gehe zu Zustand 6 über
    INT       schiebe und gehe zu Zustand 7 über
    LONG      schiebe und gehe zu Zustand 8 über
    SIGNED    schiebe und gehe zu Zustand 9 über
    UNSIGNED  schiebe und gehe zu Zustand 10 über
    FLOAT     schiebe und gehe zu Zustand 11 über
    DOUBLE    schiebe und gehe zu Zustand 12 über
    VOID      schiebe und gehe zu Zustand 13 über
    BOOL      schiebe und gehe zu Zustand 14 über

    primitive_type  gehe zu Zustand 41 über


Zustand 10

    8 primitive_type: UNSIGNED . primitive_type

    CHAR      schiebe und gehe zu Zustand 5 über
    SHORT     schiebe und gehe zu Zustand 6 über
    INT       schiebe und gehe zu Zustand 7 über
    LONG      schiebe und gehe zu Zustand 8 über
    SIGNED    schiebe und gehe zu Zustand 9 über
    UNSIGNED  schiebe und gehe zu Zustand 10 über
    FLOAT     schiebe und gehe zu Zustand 11 über
    DOUBLE    schiebe und gehe zu Zustand 12 über
    VOID      schiebe und gehe zu Zustand 13 über
    BOOL      schiebe und gehe zu Zustand 14 über

    primitive_type  gehe zu Zustand 42 über


Zustand 11

   14 primitive_type: FLOAT .

    $default  reduziere mit Regel 14 (primitive_type)


Zustand 12

   15 primitive_type: DOUBLE .

    $default  reduziere mit Regel 15 (primitive_type)


Zustand 13

   17 primitive_type: VOID .

    $default  reduziere mit Regel 17 (primitive_type)


Zustand 14

   16 primitive_type: BOOL .

    $default  reduziere mit Regel 16 (primitive_type)


Zustand 15

   18 struct_or_union: STRUCT .

    $default  reduziere mit Regel 18 (struct_or_union)


Zustand 16

   19 struct_or_union: UNION .

    $default  reduziere mit Regel 19 (struct_or_union)


Zustand 17

   34 enum_specifier: ENUM . IDENTIFIER '{' enum_members '}'
   35               | ENUM . IDENTIFIER '{' enum_members ',' '}'

    IDENTIFIER  schiebe und gehe zu Zustand 43 über


Zustand 18

    3 linkage_modifier: EXPORT .

    $default  reduziere mit Regel 3 (linkage_modifier)


Zustand 19

    4 linkage_modifier: ASYNC .

    $default  reduziere mit Regel 4 (linkage_modifier)


Zustand 20

    5 linkage_modifiers: linkage_modifier .
    6                  | linkage_modifier . linkage_modifiers

    EXTERN  schiebe und gehe zu Zustand 3 über
    STATIC  schiebe und gehe zu Zustand 4 über
    EXPORT  schiebe und gehe zu Zustand 18 über
    ASYNC   schiebe und gehe zu Zustand 19 über

    $default  reduziere mit Regel 5 (linkage_modifiers)

    linkage_modifier   gehe zu Zustand 20 über
    linkage_modifiers  gehe zu Zustand 44 über


Zustand 21

  145 variable_declaration: linkage_modifiers . type declaration_list ';'
  179 function_signature: linkage_modifiers . type IDENTIFIER '(' ')'
  180                   | linkage_modifiers . type IDENTIFIER '(' parameter_list ')'

    IDENTIFIER  schiebe und gehe zu Zustand 37 über
    CHAR        schiebe und gehe zu Zustand 5 über
    SHORT       schiebe und gehe zu Zustand 6 über
    INT         schiebe und gehe zu Zustand 7 über
    LONG        schiebe und gehe zu Zustand 8 über
    SIGNED      schiebe und gehe zu Zustand 9 über
    UNSIGNED    schiebe und gehe zu Zustand 10 über
    FLOAT       schiebe und gehe zu Zustand 11 über
    DOUBLE      schiebe und gehe zu Zustand 12 über
    VOID        schiebe und gehe zu Zustand 13 über
    BOOL        schiebe und gehe zu Zustand 14 über
    STRUCT      schiebe und gehe zu Zustand 15 über
    UNION       schiebe und gehe zu Zustand 16 über

    primitive_type             gehe zu Zustand 22 über
    struct_or_union            gehe zu Zustand 23 über
    struct_or_union_specifier  gehe zu Zustand 38 über
    type                       gehe zu Zustand 45 über


Zustand 22

   25 type: primitive_type .

    $default  reduziere mit Regel 25 (type)


Zustand 23

   22 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
   23                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
   24                          | struct_or_union . IDENTIFIER

    IDENTIFIER  schiebe und gehe zu Zustand 46 über
    '{'         schiebe und gehe zu Zustand 47 über


Zustand 24

   28 type: struct_or_union_specifier .
   36 type_declaration: struct_or_union_specifier . ';'

    ';'  schiebe und gehe zu Zustand 48 über

    $default  reduziere mit Regel 28 (type)


Zustand 25

   26 type: type . '*'
   27     | type . CONST
  146 variable_declaration: type . declaration_list ';'
  177 function_signature: type . IDENTIFIER '(' ')'
  178                   | type . IDENTIFIER '(' parameter_list ')'

    IDENTIFIER  schiebe und gehe zu Zustand 49 über
    TYPEDEF     schiebe und gehe zu Zustand 2 über
    EXTERN      schiebe und gehe zu Zustand 3 über
    STATIC      schiebe und gehe zu Zustand 4 über
    CHAR        schiebe und gehe zu Zustand 5 über
    SHORT       schiebe und gehe zu Zustand 6 über
    INT         schiebe und gehe zu Zustand 7 über
    LONG        schiebe und gehe zu Zustand 8 über
    SIGNED      schiebe und gehe zu Zustand 9 über
    UNSIGNED    schiebe und gehe zu Zustand 10 über
    FLOAT       schiebe und gehe zu Zustand 11 über
    DOUBLE      schiebe und gehe zu Zustand 12 über
    CONST       schiebe und gehe zu Zustand 50 über
    VOID        schiebe und gehe zu Zustand 13 über
    BOOL        schiebe und gehe zu Zustand 14 über
    STRUCT      schiebe und gehe zu Zustand 15 über
    UNION       schiebe und gehe zu Zustand 16 über
    ENUM        schiebe und gehe zu Zustand 17 über
    EXPORT      schiebe und gehe zu Zustand 18 über
    ASYNC       schiebe und gehe zu Zustand 19 über
    '*'         schiebe und gehe zu Zustand 51 über

    linkage_modifier           gehe zu Zustand 20 über
    linkage_modifiers          gehe zu Zustand 21 über
    primitive_type             gehe zu Zustand 22 über
    struct_or_union            gehe zu Zustand 23 über
    struct_or_union_specifier  gehe zu Zustand 24 über
    type                       gehe zu Zustand 25 über
    enum_specifier             gehe zu Zustand 26 über
    type_declaration           gehe zu Zustand 27 über
    scalar_or_array_name       gehe zu Zustand 28 über
    declaration                gehe zu Zustand 52 über
    declaration_list           gehe zu Zustand 53 über
    variable_declaration       gehe zu Zustand 30 über
    function_signature         gehe zu Zustand 31 über
    function_declaration       gehe zu Zustand 32 über


Zustand 26

   38 type_declaration: enum_specifier . ';'

    ';'  schiebe und gehe zu Zustand 54 über


Zustand 27

  185 declaration: type_declaration .

    $default  reduziere mit Regel 185 (declaration)


Zustand 28

  139 declaration: scalar_or_array_name . '=' expr
  140            | scalar_or_array_name . '=' '{' initializer_list '}'
  141            | scalar_or_array_name . '=' '{' initializer_list ',' '}'
  142            | scalar_or_array_name .

    '='  schiebe und gehe zu Zustand 55 über

    $default  reduziere mit Regel 142 (declaration)


Zustand 29

  186 translation_unit: declaration .

    $default  reduziere mit Regel 186 (translation_unit)


Zustand 30

  183 declaration: variable_declaration .

    $default  reduziere mit Regel 183 (declaration)


Zustand 31

  181 function_declaration: function_signature . ';'
  182                     | function_signature . block

    '{'  schiebe und gehe zu Zustand 56 über
    ';'  schiebe und gehe zu Zustand 57 über

    block  gehe zu Zustand 58 über


Zustand 32

  184 declaration: function_declaration .

    $default  reduziere mit Regel 184 (declaration)


Zustand 33
